# intervals-spa

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  INSTALL.md  INTEGRATION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  ENHANCEMENTS.md  MODEL.md  PLAN.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  STYLEGUIDE.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.module.css  Layout.tsx
frontend/src/hooks/: useWorkouts.ts
frontend/src/pages/: NotFoundPage.tsx  WorkoutDetailPage.tsx  WorkoutsPage.tsx
frontend/src/test/: NotFoundPage.test.tsx
frontend/src/types/: api.ts
mockup/: README.md  app.js  dev.sh  index.html  run.sh  server.py  styles.css
scripts/checks/: verify_package_artifacts.py
scripts/ralph/: prd.json  prd.json.example  progress.txt  prompt.md  ralph.sh
src/intervals/: __init__.py
src/intervals/api/: __init__.py  error_handlers.py  main.py
src/intervals/application/: __init__.py  contracts.py  orchestration.py  parsing.py  validation.py
src/intervals/domain/: __init__.py  enums.py  model.py  validation.py
src/intervals/infrastructure/: __init__.py  config.py  (+1 more)
tests/: __init__.py
tests/e2e/: __init__.py
tests/integration/: test_health.py
tests/unit/: test_domain_model.py  test_smoke.py
tools/: TOOLS.md  fetch-intervals-by-label.sh
webapp/: README.md  app.js  datenschutz.html  dev.sh  impressum.html  index.html  license.html  run.sh  server.py  styles.css
(+6 files in other folders)
